testdata/invalid/map_compiler_owned_key.hzn
package probes

type Value struct {
    seen u64
}

map Headers hash[xdp.Eth, Value]
